[package]
name = "artemis"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aegis63/artemis"
readme = "README.md"
description = "Rust Graph Ql Client over Websocket"
keywords = ["graphql", "ws", "client"]

[dependencies]
websocket-lite = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.5"
futures-util = "0.3.28"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["full"] }
